# the-agent

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .version  AGENTS.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Pipfile  README.md  SECURITY.md  alembic.ini  conftest.py  pyproject.toml  pytest.ini
.agent/rules/: code-style.md  tooling.md
.claude/: CLAUDE.md
.cursor/rules/: behavior.mdc  goals.mdc  style.mdc  tooling.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  planned_work.yaml  request_support.yaml
.github/workflows/: beta.yml  dependabot-main-pr-lock.yml  dependabot-main-pr-merge.yml  dependabot-main-pr-verify.yml  dependabot-main-pr.yml  qa.yml  release.yml
config/: logos.yaml  products.yaml
docker/: .env  README.md  docker-compose.yml
docs/: open-api-docs.yaml  open-api-users.yaml
src/: auth.py  config.py  fast_api.py  main.py  safe_printer_mixin.py  web_fetcher.py
src/api/: auth.py  authorization_service.py  gumroad_controller.py  profile_connect_controller.py  purchases_controller.py  settings_controller.py  sponsorships_controller.py  transfers_controller.py  usage_controller.py
src/db/: sql.py
src/di/: di.py
src/features/: attachments_content_resolver.py  auth.py  chat_config_manager.py  command_processor.py  html_content_cleaner.py  information_announcer.py  invite_manager.py  web_fetcher.py
src/util/: config.py  error_codes.py  errors.py  functions.py  log.py  safe_printer_mixin.py  singleton.py  translations_cache.py
test/: test_safe_printer_mixin.py  test_web_fetcher.py
test/api/: test_auth.py  test_authorization_service.py  test_chat_settings_payload.py  test_gumroad_controller.py  test_profile_connect_controller.py  test_purchases_controller.py  test_settings_controller.py  (+4 more)
test/db/: sql.py  (+1 more)
tools/: check_spacing.py  db_apply_head_schema.sh  db_apply_migration.sh  db_generate_migration.sh  db_update_schema.sh  messages.sh  prepare_github_release.py  publish_github_release.py  run_dev.sh  run_lint.sh  run_main.sh  run_prod.sh  run_tests.sh
(+531 files in other folders)
